# ircBot

./: .editorconfig  README.md  checksum  circle.yml  git.sh  ircBot.cabal  nightly.pl  stack.yaml  xnukbot.cabal
app/: IrcBot.hs  Main.hs
src/: Lib.hs  Recv.hs  Sender.hs  TLSConnect.hs
src/Plugin/: Echo.hs  Logger.hs  Plugin.hs  Setting.hs  Type.hs
src/Server/: Uriirc.hs
src/Xnukbot/Connect/: Sender.hs
src/Xnukbot/Plugin/Base/: Echo.hs  Logger.hs  Types.hs
test/: Main.hs  Spec.hs
xnukbot/: README.md  xnukbot.cabal  xnukbot.yaml
xnukbot-base/: LICENSE  xnukbot.cabal  xnukbot.yaml
xnukbot-base/exe/: ServerRepl.hs
xnukbot-base/src/Network/IRC/Base/: Trans.hs
xnukbot-base/src/Xnukbot/: IrcBot.hs  Plugin.hs
xnukbot-base/src/Xnukbot/Connect/: Sender.hs  TLSConnect.hs
xnukbot-base/src/Xnukbot/Plugin/: Attr.hs  Base.hs  Simple.hs  Types.hs  Util.hs
xnukbot-base/src/Xnukbot/Plugin/Base/: Echo.hs  Logger.hs  Setting.hs
xnukbot-base/src/Xnukbot/Server/: Uriirc.hs  Znc.hs
xnukbot-base/test/: Main.hs
xnukbot-exe/: xnukbot-exe.cabal  xnukbot-exe.yaml
xnukbot-exe/app/: Main.hs
xnukbot-plugins/: xnukbot-plugins.cabal  xnukbot-plugins.yaml
xnukbot-plugins/src/Xnukbot/Plugin/: Hyeong.hs  Ignore.hs  Mueval.hs  Mueval.hs.temp
xnukbot-plugins/src/Xnukbot/Plugin/Chat/: Emoji.hs
xnukbot-plugins/src/Xnukbot/Plugin/Data/: Random.hs
xnukbot-plugins/src/Xnukbot/Plugin/Join/: Invite.hs  Part.hs
xnukbot-plugins/test/: Main.hs
xnukbot/app/: IrcBot.hs  Main.hs
xnukbot/src/Xnukbot/: IrcBot.hs
xnukbot/src/Xnukbot/Connect/: Recv.hs
(+11 files in other folders)
